feat: Implement Convolution Neural Network
Develop Convolution Neural Network to classify images contained in CIFAR10
dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 intro-to-pytorch/__pycache__/
 intro-to-pytorch/Cat_Dog_data/*
 intro-to-pytorch/__MACOSX/*
+convolutional-neural-networks/cifar-cnn/data/*
