--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .ipynb_checkpoints
-intro-to-pytorch/__pycache__/
+**/__pycache__/
 intro-to-pytorch/Cat_Dog_data/*
 intro-to-pytorch/__MACOSX/*
 convolutional-neural-networks/cifar-cnn/data/*
+weight-initialization/data/*
