feat: Download yosemite images and configure required things before getting started with cyclegan

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ weight-initialization/data/*
 autoencoder/convolutional-autoencoder/data/*
 autoencoder/linear-autoencoder/data/*
 word2vec-embeddings/data/*
+cycle-gan/summer2winter_yosemite/*
+cycle-gan/__MACOSX/*
